--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/compiler-cli": "^4.4.6",
     "@angular/animations": "~8.2.13",
-    "@angular/cli": "~8.2.13",
+    "@angular/cli": "~1.4.9",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
     "@angular/core": "~8.2.13",
