--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/compiler-cli": "^4.4.6",
     "@angular/animations": "~8.2.13",
     "@angular/cli": "~1.4.9",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
+    "@angular/compiler-cli": "^4.4.6",
     "@angular/core": "~8.2.13",
     "@angular/forms": "~8.2.13",
     "@angular/platform-browser": "~8.2.13",
@@ -28,7 +28,8 @@
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
