--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/cli": "~8.3.18",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
-    "@angular/compiler-cli": "^4.4.6",
+    "@angular/compiler-cli": "~8.2.13",
     "@angular/core": "~8.2.13",
     "@angular/forms": "~8.2.13",
     "@angular/platform-browser": "~8.2.13",
